# depfused

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: browser.rs  config.rs  lib.rs  main.rs  scanner.rs  types.rs
src/discovery/: browser_capture.rs  js_fetcher.rs  mod.rs  sourcemap_probe.rs
src/notify/: console.rs  mod.rs  telegram.rs
src/parser/: ast_parser.rs  bundlers.rs  deobfuscate.rs  filters.rs  mod.rs  sourcemap.rs  webpack.rs
src/registry/: cache.rs  mod.rs  npm.rs
testsite/labs/: fix-node-modules.sh  serve-all.py
testsite/labs/angular-app/: angular.json  package-lock.json  package.json  tsconfig.json
testsite/labs/angular-app/src/: styles.css  typings.d.ts
testsite/labs/esbuild-app/: package-lock.json  package.json
testsite/labs/esbuild-app/src/: auth.js  config.js  index.js
testsite/labs/nextjs-app/: next.config.js  package-lock.json  package.json
testsite/labs/nextjs-app/components/: MetricsCard.js  Sidebar.js
testsite/labs/nextjs-app/lib/: analytics.js  payments.js
testsite/labs/nextjs-app/pages/: _app.js  about.js  dashboard.js  index.js
testsite/labs/obfuscated/: build.js  obfuscate.js  package-lock.json  package.json
testsite/labs/parcel-react/: package-lock.json  package.json
testsite/labs/rollup-library/: package-lock.json  package.json  rollup.config.js
testsite/labs/swc-app/: .swcrc  package-lock.json  package.json
testsite/labs/vite-vue/: index.html  package-lock.json  package.json  vite.config.js
testsite/labs/webpack5-react/: package-lock.json  package.json  webpack.config.js
(+33 files in other folders)
