[package]
name = "depfused"
version = "0.1.0"
edition = "2021"
description = "High-performance dependency confusion scanner"
authors = ["depfused"]
license = "MIT"
rust-version = "1.85"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Rate limiting
governor = "0.6"

# JS AST parsing (3x faster than swc)
oxc_parser = "0.30"
oxc_allocator = "0.30"
oxc_span = "0.30"
oxc_ast = "0.30"

# Source map parsing
sourcemap = "8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
url = "2.3"
urlencoding = "2.1"
thiserror = "1.0"
regex = "1.10"
base64 = "0.21"
dashmap = "5"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal colors
colored = "2.1"
indicatif = "0.17"

# Browser automation
chromiumoxide = { version = "0.8", features = ["tokio-runtime", "_fetcher-rustls-tokio"] }

# Home directory resolution
dirs = "6"

[[bin]]
name = "depfused"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
